rbx_binary/src/tests/snapshots/rbx_binary__tests__util__three-vector3values__encoded.snap
---
source: rbx_binary/src/tests/util.rs
assertion_line: 46
expression: text_roundtrip
---
num_types: 1
num_instances: 3
chunks:
  - Inst:
      type_id: 0
      type_name: Vector3Value
      object_format: 0
      referents:
        - 0
        - 1
        - 2
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - "\u0000\u0000\u0000\u0000"
        - "\u0000\u0000\u0000\u0000"
        - "\u0000\u0000\u0000\u0000"
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - "1337, -1337, 0"
        - "0.15625, -0.15625, 0.1"
        - "inf, -inf, nan"
  - Prop:
      type_id: 0
      prop_name: SourceAssetId
      prop_type: Int64
      values:
        - -1
        - -1
        - -1
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
        - ""
        - ""
  - Prop:
      type_id: 0
      prop_name: Value
      prop_type: Vector3
      values:
        - - 1337.0
          - -1337.0
          - 0.0
        - - 0.15625
          - -0.15625
          - 0.1
        - - .inf
          - -.inf
          - .nan
  - Prnt:
      version: 0
      links:
        - - 0
          - -1
        - - 1
          - -1
        - - 2
          - -1
  - End

